--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<main id="container">
+		<h1 id="my-id">Testimonials</h1>
+		<div class="my-pad">This Product is amazing & highly recommended it to anyone is need a solution like this.
+		<div class="my-pond">-John Doe</div>
+		</div>
+		<div class="my-pad">This Product is amazing & highly recommended it to anyone is need a solution like this.
+		<div class="my-pond">-John Doe</div>
+		</div>
+		
+
+		
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
