--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
 	<main id="container">
 		<h1 id="my-id">Testimonials</h1>
 		<div class="my-pad">This Product is amazing & highly recommended it to anyone is need a solution like this.
-		<div class="my-pond">-John Doe</div>
+		<p class="my-pond">-John Doe</p>
 		</div>
 		<div class="my-pad">This Product is amazing & highly recommended it to anyone is need a solution like this.
-		<div class="my-pond">-John Doe</div>
+		<p class="my-pond">-John Doe</p>
 		</div>
 		
 
