--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<main id="container">
+	<section id="container">
 		<h1 id="my-id">Testimonials</h1>
 		<div class="my-pad">This Product is amazing & highly recommended it to anyone is need a solution like this.
 			<p class="my-pond">-John Doe</p>
@@ -26,7 +26,7 @@
 		
 
 		
-	</main>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
