--- a/main.html
+++ b/main.html
@@ -7,26 +7,15 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<section id="container">
-		<h1 id="my-id">Testimonials</h1>
-		<div class="my-pad">This Product is amazing & highly recommended it to anyone is need a solution like this.
-			<p class="my-pond">-John Doe</p>
+	<div class="my-1">
+		<h1>Testimonials</h1>
+		<div class="my-2"><p>This product is amazing! I highly recommended it to anyone of a solution like this.</p>
+		<p class="my-3">-John Doe</p>
 		</div>
-		<div class="my-pad">
-			This Product is amazing & highly recommended it to anyone is need a solution like this.
-        <p class="my-pond">-John Doe</p>	
+		<div class="my-2"><p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+		<p class="my-3">-Jame Smith</p>
 		</div>
-<!-- 		<div class="my-pad">This Product is amazing & highly recommended it to anyone is need a solution like this.
-		<p class="my-pond">-John Doe</p>
-		</div>
-		<div class="my-pad">This Product is amazing & highly recommended it to anyone is need a solution like this.
-		<p class="my-pond">-John Doe</p>
-		</div> -->
-		
-
-		
-	</section>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
